Fix controls and context menu z-index

--- a/src/css/videojs-hola-skin.less
+++ b/src/css/videojs-hola-skin.less
@@ -34,6 +34,7 @@
     .vjs-control-bar,
     .vjs-rightclick-popup {
         color: #fff;
+        z-index: 2;
     }
     // big play button
     & .vjs-big-play-button,
